add celery and redis solution for background tasks
Previous approach was not working correctly because background tasks
activated when FastAPI restarted. Probably something to do with the
event loop, which I could't debug.

FastAPI background tasks also did not work, had the same problem. I
suppose they use asyncio which is the source of the problem.

This commit installs redis in the fastapi image and has celery and
fastapi running in parallel.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - MYSQL_DATABASE=fastapi_app
       - MYSQL_USER=user
       - MYSQL_PASSWORD=password
-    command: fastapi dev src/main.py --host 0.0.0.0
+    command: ./init.sh
 
   mysql:
     image: mysql:8.4
